--- a/static/css/layout.css
+++ b/static/css/layout.css
@@ -62,7 +62,7 @@ nav li {
 
 li a {
     text-decoration: none;
-    color: black;
+    color: #060021;
     padding: 10px 12px;
     border-radius: 50px;
     transition: 250ms;
@@ -80,18 +80,7 @@ li.order a {
     transition: 250ms;
 }
 
-a:where(:hover, :focus) {
-    background-color:  var(--pink);
-    text-shadow:0px 0px 1px black;
-    transition: 250ms;
-}
 
-li.order a:where(:hover, :focus) {
-    background-color: var(--pink);
-    color: black;
-    text-shadow: 0px 0px 1px black;
-    transition: 250ms;
-}
 
 .mobile-nav-toggle {
     display: none;
@@ -688,11 +677,6 @@ img.bean4 {
     margin-bottom: 10px;
 }
 
-.contacts a, .address a, .social-media a:where(:hover, :focus) {
-    cursor: pointer;
-    background-color: var(--black);
-}
-
 .copyright p {
     text-align: center;
     padding: 65px 0px 24px 0px;
@@ -784,6 +768,7 @@ img.bean4 {
         width: 228px;
         height: 60px;
     }
+
 
 /*Tablet Pink Page*/
     
@@ -1592,23 +1577,47 @@ img.bean4 {
         font-size: 35px;
     }
 
+}
 
+/*HOVER*/
 
+/*Devices  that can hover*/
 
-    
+@media (hover: hover) {
 
+    a:where(:hover, :focus,) {
+        background-color:  var(--pink);
+        transition: 250ms;
+    }
 
+    li.order a:where(:hover, :focus) {
+        background-color: var(--pink);
+        color: black;
+        transition: 250ms;
+    }
 
+    .contacts a, .address a, .social-media a:where(:hover, :focus) {
+        cursor: pointer;
+        background-color: var(--black);
+    }
 
+    button.open:hover {
+        cursor: pointer;
+        background-color: var(--black); 
+        color: var(--white);
+    }
 
+    button.open:active {
+        transform: scale(1.1);
+        transition: transform 0.2s;
+        color: var(--white);
+        background-color: var(--black);
+    }
 
+}
 
+/*Devices that can't hover*/
 
-
-
-
-
-
-
+@media (hover: none) {
 
 }
